--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"@chakra-ui/react": "^2.10.7",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@tanstack/react-query": "^5.71.1",
+		"axios": "^1.8.4",
 		"framer-motion": "^12.6.2",
+		"localforage": "^1.10.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router": "^7.4.1"
