--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"localforage": "^1.10.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router": "^7.4.1"
+		"react-router": "^7.4.1",
+		"react-toastify": "^11.0.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
