--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "^2.2.4",
 		"@chakra-ui/react": "^2.10.7",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@hookform/resolvers": "^4.1.3",
 		"@tanstack/react-query": "^5.71.1",
 		"axios": "^1.8.4",
 		"framer-motion": "^12.6.2",
 		"localforage": "^1.10.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.55.0",
 		"react-router": "^7.4.1",
-		"react-toastify": "^11.0.5"
+		"react-toastify": "^11.0.5",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
